Fix header sizes on mobile

--- a/styles/text.css
+++ b/styles/text.css
@@ -61,3 +61,42 @@
 .white {
     color: white;
 }
+
+
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 601px) {
+    .font-huge {
+        font-size: 60px;
+    }
+    
+    .font-large {
+        font-size: 32px;
+    }
+    
+    .font-medium {
+        font-size: 20px;
+    }
+    
+    .font-small {
+        font-size: 14px;
+    }
+  }
+  
+  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media screen and (max-width: 600px) {
+    .font-huge {
+        font-size: 30px;
+    }
+    
+    .font-large {
+        font-size: 32px;
+    }
+    
+    .font-medium {
+        font-size: 20px;
+    }
+    
+    .font-small {
+        font-size: 14px;
+    }
+  }
