--- a/styles/title.css
+++ b/styles/title.css
@@ -21,9 +21,7 @@
 
 .image-header p {
 	color: white;
-	font-size: 50px;
 	text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
 }
 
 .image-section {
